src/kcm/package/contents/main.qml
@@ -1,9 +1,10 @@
 // SPDX-License-Identifier: GPL-2.0-only OR GPL-3.0-only OR LicenseRef-KDE-Accepted-GPL
-// SPDX-FileCopyrightText: 2020 Harald Sitter <sitter@kde.org>
+// SPDX-FileCopyrightText: 2020-2021 Harald Sitter <sitter@kde.org>
 
 import org.kde.kcm 1.2 as KCM
 import QtQuick 2.14
 import QtQml.Models 2.14
+import QtQuick.Layouts 1.14
 import SMART 1.0 as SMART
 import org.kde.kirigami 2.12 as Kirigami
 import QtQuick.Controls 2.14
@@ -49,7 +50,38 @@ KCM.SimpleKCM {
 
         delegate: Kirigami.Card {
             banner.title: "%1 (%2)".arg(product).arg(path)
-            banner.titleIcon: failed ? "data-warning" : ""
+            banner.titleIcon: {
+                if (failed) {
+                    return "data-warning"
+                }
+                if (instabilities.length !== 0) {
+                    return "data-information"
+                }
+                return ""
+            }
+
+            contentItem: Label {
+                width: parent.width
+                wrapMode: Text.Wrap
+                text: {
+                    if (failed) {
+                        return i18nc("@info",
+                            "The SMART system of this device is reporting problems. This may be a sign of imminent device failure or data reliability being compromised. " +
+                            "Back up your data and replace this drive as soon as possible to avoid losing any data.")
+                    }
+                    if (instabilities.length !== 0) {
+                        var items = instabilities.map(item => "<li>%1</li>".arg(item))
+                        return i18nc("@info %1 is a bunch of <li> with the strings from instabilities.cpp",
+                            "<p>The SMART firmware is not reporting a failure, but there are early signs of malfunction. " +
+                            "This might point at imminent device failure but requires longer term analysis. " +
+                            "Back up your data and contact the manufacturer of this disk, or replace it preemptively just to be safe.</p>" +
+                            "<ul>%1</ul>", items.join(''))
+                    }
+                    return i18nc("@info",
+                            "This device appears to be working as expected.")
+                }
+            }
+
             actions: [
                 Kirigami.Action {
                     visible: partitionManagerRunner.canRun
@@ -73,15 +105,6 @@ KCM.SimpleKCM {
                     }
                 }
             ]
-            contentItem: Label {
-                width: parent.width
-                wrapMode: Text.Wrap
-                text: failed
-                      ? i18nc("@info",
-                              "The SMART system of this device is reporting problems. This may be a sign of imminent device failure or data reliability being compromised. It is highly recommended that you backup your data and replace this drive as soon as possible to avoid losing any data.")
-                      : i18nc("@info",
-                             "This device appears to be working as expected.")
-            }
         }
     }
 }
